--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=django-insecure-fqfhhjiy+$-d9b*kn+uc5f%3(2dh75v0ngx=$6^+(z6ah8jzv7
 DB_ENGINE=django.db.backends.postgresql_psycopg2
-DB_NAME=atk_db
-DB_USER=postgres
+DB_NAME=db
+DB_USER=user
 DB_PASSWORD=pass
-DB_HOST=atk_db
+DB_HOST=db
 DB_PORT=5432
