--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,11 @@ services:
       container_name: db
       restart: always
       ports:
-        - "5432:5432"
-        # - "${DB_PORT}:5432"
+        - "${DB_PORT}:5432"
       environment:
-        # - POSTGRES_DB=${DB_NAME}
-        # - POSTGRES_USER=${DB_USER}
-        # - POSTGRES_PASSWORD=${DB_PASSWORD}
-        - POSTGRES_DB=db
-        - POSTGRES_USER=user
-        - POSTGRES_PASSWORD=pass
+        - POSTGRES_DB=${DB_NAME}
+        - POSTGRES_USER=${DB_USER}
+        - POSTGRES_PASSWORD=${DB_PASSWORD}
         - POSTGRES_HOST_AUTH_METHOD=trust
       volumes:
         - postgres_data:/var/lib/postgresql/data
